


(library
 (name proc)        ; name of the opam library
 (libraries menhirLib parser_plaf)
 (public_name proc) ; required for generating documentation
                    ; also requires sool.opam in root of workspace
 (synopsis "Interpreter for PROC")
 ;; (wrapped      false) ; true by default
 )

; the next line avoids warnings from stopping the build

(env
 (dev
  (flags
   (:standard -warn-error -A))))

