


(library
 (name sool)        ; name of the opam library
 (libraries parser_plaf)
 (public_name sool) ; required for generating documentation
 (synopsis "Interpreter for PROC")
 ;; (wrapped      false) ; true by default
 )

; the next line avoids warnings from stopping the build

(env
 (dev
  (flags
   (:standard -warn-error -A))))

